--- a/src/app/containers/footer/Footer.scss
+++ b/src/app/containers/footer/Footer.scss
@@ -4,12 +4,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 11vh;
-  background-color: $ember-blue;
+  height: 24vh;
+  background-color: $darkest-blue;
   color: white;
-  text-align: left;
-}
-
-.footer h1 {
-  margin-top: 0;
 }
