--- a/src/app/views/sponsorship/Sponsorship.scss
+++ b/src/app/views/sponsorship/Sponsorship.scss
@@ -23,7 +23,7 @@
 
 .sponsor-content {
   display: grid;
-  grid-template-columns: 55% 45%;
+  grid-template-columns: 45% 10% 45%;
 }
 
 .sponsor-content-heading {
@@ -67,7 +67,7 @@
 
 .sponsor-stat {
   display: inline-block;
-  margin: 20px 50px;
+  margin: 20px 40px;
 }
 
 .sponsor-stat p {
@@ -108,7 +108,7 @@
 }
 
 .sponsor-content-anecdote {
-  grid-column: 2;
+  grid-column: 3;
   border-radius: 30px;
   padding: 30px;
   background-color: $light-blue;
@@ -149,6 +149,10 @@
   height: 120px;
   width: 300px;
   margin: 20px;
+}
+
+#Lizzie {
+  height: 380px;
 }
 
 @media screen and (max-width: 1200px) {
